OpenCL error when rendering with cycles #69686

Closed
opened 2019-09-09 20:23:22 +02:00 by gabe2252 · 4 comments

System Information
Operating system: Linux-5.0.0-27-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: Radeon RX 580 Series (POLARIS10, DRM 3.31.0, 5.0.0-27-generic, LLVM 7.1.0) X.Org 4.5 (Core Profile) Mesa 18.3.0-rc4

Blender Version
Broken: version: 2.81 (sub 8), branch: master, commit date: 2019-09-09 11:09, hash: 423435bd2e

Short description of error
OpenCL error when rendering: split kernel error: failed to load kernel_path_init

Exact steps for others to reproduce the error

  1. Open default scene
  2. Select cycles render
  3. Select GPU rendering
  4. Render image
  5. Errors
**System Information** Operating system: Linux-5.0.0-27-generic-x86_64-with-debian-buster-sid 64 Bits Graphics card: Radeon RX 580 Series (POLARIS10, DRM 3.31.0, 5.0.0-27-generic, LLVM 7.1.0) X.Org 4.5 (Core Profile) Mesa 18.3.0-rc4 **Blender Version** Broken: version: 2.81 (sub 8), branch: master, commit date: 2019-09-09 11:09, hash: `423435bd2e` **Short description of error** OpenCL error when rendering: split kernel error: failed to load kernel_path_init **Exact steps for others to reproduce the error** 1. Open default scene 2. Select cycles render 3. Select GPU rendering 4. Render image 5. Errors
Author

Added subscriber: @gabe2252

Added subscriber: @gabe2252

This issue was referenced by blender/cycles@c7d379b24e

This issue was referenced by blender/cycles@c7d379b24ee3b612e5ed276b5b5cdb444678b9a1

This issue was referenced by 51334dd3a6

This issue was referenced by 51334dd3a64ef2fdc4df70e64bad26a95e4358f1

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Brecht Van Lommel self-assigned this 2019-09-09 22:11:38 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#69686
No description provided.