Fix T69686: Cycles OpenCL build error after recent changes